update styles import

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { ClientRouter } from 'astro:transitions'
-import './src/styles/global.css'
+import '../styles/global.css'
 import { NavBar } from '../components/header/NavBar'
 import { InstagramIcon } from '../components/icons/InstagramIcon'
 import { GitHubIcon } from '../components/icons/GithubIcon'
